bring back on workflow dispatch

--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -1,5 +1,13 @@
 name: Build all
 
+on:
+    workflow_dispatch: # allows for manual dispatch
+        inputs:
+            build-deps-only:
+                description: "Only build dependencies (bypasses caching)"
+                type: boolean
+                default: false
+
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
