--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -3,5 +3,10 @@
 // For a full list of overridable settings, and general information on folder-specific settings,
 // see the documentation: https://zed.dev/docs/configuring-zed#settings-files
 {
-    "tab_size": 4
+    "tab_size": 4,
+    "languages": {
+        "YAML": {
+            "tab_size": 2
+        }
+    }
 }
