--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -4,10 +4,12 @@
 // see the documentation: https://zed.dev/docs/configuring-zed#settings-files
 {
     "format_on_save": "off",
+    "formatter": null,
     "tab_size": 4,
     "languages": {
         "YAML": {
-            "tab_size": 2
+            "tab_size": 2,
+            "format_on_save": "off"
         }
     }
 }
